# EAE_Firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
srcs/: CMakeLists.txt  coolant_controller.c  coolant_controller.h  main.c  main.h  sys_init.c  sys_init.h
srcs/CAN/: can_proceed.c  can_proceed.h
srcs/CANopen/: OD.c  OD.h
srcs/drivers/: drivers.h  drv_can_open.c  drv_fan.c  drv_fan.h  drv_ignition_switch.c  drv_ignition_switch.h  drv_pump.c  drv_pump.h  drv_temperature_sensor.c  drv_temperature_sensor.h
tests/: CMakeLists.txt  test1.cc  test_coolant_controller.cc  test_sys_init.cc
